# fangen

./: .gitignore  .pre-commit-config.yaml  README.md  config.dist.toml  dictionary.json  fangen.spec  justfile  pyproject.toml  ruff.toml
.github/workflows/: release.yml
src/fangen/: __main__.py  config.py
src/fangen/common/: data.py  utils.py  values.py
src/fangen/cosplay2/: client.py
src/fangen/cosplay2/models/: plan.py  request.py  topic.py  value.py  vo.py
src/fangen/db/: __init__.py  factory.py  make_db.py  repo.py  update_db.py
src/fangen/db/models/: __init__.py  base.py  node.py  request.py  topic.py  value.py
src/fangen/excel/: formatting.py  make_data.py  make_plan.py  update_data.py  update_plan.py  utils.py
src/fangen/files/: download_files.py  move_files.py  utils.py
src/fangen/plan/: formatting.py  make_plan.py  utils.py
