[project]
name = "fangen"
version = "0.1.0"
description = "Cosplay2Excel parser"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b12",
    "openpyxl>=3.1.5",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "yt-dlp>=2026.7.4",
]

[project.scripts]
fangen = "fangen.__main__:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "ruff>=0.15.21",
]
